--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap');
+
+* {
+  font-family: 'Poppins', sans-serif;
+}
 
 body {
   margin: 0;
